[gd_scene load_steps=10 format=3 uid="uid://bbwhnh0h4j31g"]

[ext_resource type="Script" uid="uid://crfpgfptl0k30" path="res://Components/ui.gd" id="1_arrjb"]
[ext_resource type="Texture2D" uid="uid://bvsfge3jtee13" path="res://Assets/UI/GUI.png" id="1_repkr"]
[ext_resource type="Texture2D" uid="uid://d1ik4g2re3iqj" path="res://Assets/Character/HERO_FREE_Samurai 2D Pixel Art v1.2/Sprites/IDLE.png" id="2_sgocf"]
[ext_resource type="Texture2D" uid="uid://dp6x34abhp5u" path="res://Assets/UI/Panel.png" id="3_kh4jv"]
[ext_resource type="FontFile" uid="uid://df31kyd3cfc32" path="res://Assets/UI/Cubic-11-1.000-R-2.ttf" id="4_arrjb"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_kh4jv"]
content_margin_left = 15.0
content_margin_top = 15.0
content_margin_right = 15.0
content_margin_bottom = 15.0
texture = ExtResource("1_repkr")
region_rect = Rect2(2, 34, 44, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_arrjb"]
atlas = ExtResource("2_sgocf")
region = Rect2(41, 47, 13, 13)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_li6kp"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
texture = ExtResource("3_kh4jv")

[sub_resource type="LabelSettings" id="LabelSettings_4ehno"]
font = ExtResource("4_arrjb")
font_size = 44

[node name="UI" type="HBoxContainer"]
offset_left = 61.0
offset_top = 888.0
offset_right = 365.0
offset_bottom = 1038.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
script = ExtResource("1_arrjb")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_kh4jv")

[node name="TextureRect" type="TextureRect" parent="PanelContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_arrjb")
expand_mode = 5
stretch_mode = 6

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 2
columns = 3

[node name="Ability1" type="PanelContainer" parent="GridContainer"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_li6kp")

[node name="up" type="Label" parent="GridContainer/Ability1"]
visible = false
layout_mode = 2
text = " 上"
label_settings = SubResource("LabelSettings_4ehno")

[node name="Ability2" type="PanelContainer" parent="GridContainer"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_li6kp")

[node name="down" type="Label" parent="GridContainer/Ability2"]
visible = false
layout_mode = 2
text = " 下"
label_settings = SubResource("LabelSettings_4ehno")

[node name="Ability3" type="PanelContainer" parent="GridContainer"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_li6kp")

[node name="left" type="Label" parent="GridContainer/Ability3"]
visible = false
layout_mode = 2
text = " 左"
label_settings = SubResource("LabelSettings_4ehno")

[node name="Ability4" type="PanelContainer" parent="GridContainer"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_li6kp")

[node name="right" type="Label" parent="GridContainer/Ability4"]
visible = false
layout_mode = 2
text = " 右"
label_settings = SubResource("LabelSettings_4ehno")

[node name="Ability5" type="PanelContainer" parent="GridContainer"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_li6kp")

[node name="tru" type="Label" parent="GridContainer/Ability5"]
visible = false
layout_mode = 2
text = " 真"
label_settings = SubResource("LabelSettings_4ehno")

[node name="Ability6" type="PanelContainer" parent="GridContainer"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_li6kp")

[node name="fals" type="Label" parent="GridContainer/Ability6"]
visible = false
layout_mode = 2
text = " 伪"
label_settings = SubResource("LabelSettings_4ehno")
